# rowan

./: .gitignore  .travis.yml  Cargo.toml  README.md  bors.toml  rustfmt.toml
.github/workflows/: ci.yaml  rustdoc.yaml
examples/: math.rs  s_expressions.rs
src/: algo.rs  api.rs  arc.rs  ast.rs  cursor.rs  green.rs  imp.rs  lib.rs  macros.rs  pointer.rs  pool.rs  red.rs  roots.rs  ser.rs  serde_impls.rs  sll.rs  swap_cell.rs  syntax.rs  syntax_element.rs  syntax_node.rs  syntax_text.rs  syntax_token.rs  utility_types.rs
src/green/: builder.rs  element.rs  mod.rs  node.rs  node_cache.rs  token.rs  token_text.rs
src/helpers/: mod.rs
src/syntax/: free_list.rs  mod.rs  node.rs  text.rs  token.rs  untyped.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: tidy.rs
