[package]
name = "rowan"
version = "0.15.10"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/rust-analyzer/rowan"
license = "MIT OR Apache-2.0"
description = "Library for generic lossless syntax trees"
edition = "2021"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
rustc-hash = "1.0.1"
hashbrown = { version = "0.12", features = ["inline-more"], default-features = false }
text-size = "1.1.0"
memoffset = "0.6"
countme = "3.0.0"

serde = { version = "1.0.89", optional = true, default-features = false }

[dev-dependencies]
logos = "0.12.1"

[features]
serde1 = [ "serde", "text-size/serde" ]
