[package]
name = "rowan"
version = "0.15.11"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/rust-analyzer/rowan"
license = "MIT OR Apache-2.0"
description = "Library for generic lossless syntax trees"
edition = "2021"

exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
rustc-hash = "1.0.1"
hashbrown = { version = "0.12", features = ["inline-more"], default-features = false }
text-size = "1.1.0"
memoffset = "0.8"
countme = "3.0.0"

serde = { version = "1.0.89", optional = true, default-features = false }

[dev-dependencies]
m_lexer = "0.0.4"

[features]
serde1 = [ "serde", "text-size/serde" ]
