[package]
name = "rowan"
version = "0.16.1"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/rust-analyzer/rowan"
license = "MIT OR Apache-2.0"
description = "Library for generic lossless syntax trees"
edition = "2021"
rust-version = "1.77.0"
exclude = [".github/", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
rustc-hash = "2.1.0"
text-size = "1.1.0"
countme = "3.0.0"

[dependencies.hashbrown]
version = "0.15.2"
features = ["inline-more", "raw-entry"]
default-features = false

[dependencies.serde]
version = "1.0.89"
optional = true
default-features = false

[dev-dependencies]
m_lexer = "0.0.4"

[features]
serde1 = ["serde", "text-size/serde"]
